logs/django-swstags.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_swstags-0.10.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sws_tags'...
Listing './lib/python3.5/site-packages/sws_tags/static'...
Listing './lib/python3.5/site-packages/sws_tags/static/css'...
Listing './lib/python3.5/site-packages/sws_tags/static/js'...
Listing './lib/python3.5/site-packages/sws_tags/sws_utils'...
Compiling './lib/python3.5/site-packages/sws_tags/sws_utils/contaplus.py'...
***   File "./lib/python3.5/site-packages/sws_tags/sws_utils/contaplus.py", line 257
    print traceback.format_exc()
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sws_tags/sws_utils/cube.py'...
***   File "./lib/python3.5/site-packages/sws_tags/sws_utils/cube.py", line 384
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sws_tags/sws_utils/cube_utils.py'...
***   File "./lib/python3.5/site-packages/sws_tags/sws_utils/cube_utils.py", line 53
    except WebFault, fault:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sws_tags/sws_utils/excel.py'...
***   File "./lib/python3.5/site-packages/sws_tags/sws_utils/excel.py", line 74
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sws_tags/sws_utils/filters.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (filters.py, line 154)
Compiling './lib/python3.5/site-packages/sws_tags/sws_utils/highcharts.py'...
***   File "./lib/python3.5/site-packages/sws_tags/sws_utils/highcharts.py", line 210
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sws_tags/sws_utils/xlsx.py'...
***   File "./lib/python3.5/site-packages/sws_tags/sws_utils/xlsx.py", line 557
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sws_tags/templates'...
Listing './lib/python3.5/site-packages/sws_tags/templates/tags'...
Listing './lib/python3.5/site-packages/sws_tags/templatetags'...
Listing './share'...
Listing './share/python-wheels'...
